--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "json-server": "^0.16.3",
+    "jwt-decode": "^4.0.0",
+    "jwt-decoder": "^0.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
